<resources>
    <string name="app_name">Address Book</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AddNewContact">Add new contact</string>
    <string name="title_activity_new_contact">New Contact</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Email">E-mail</string>
    <string name="NewContactCreated">New contact created</string>
    <string name="EditContact">Edit contact</string>
    <string name="DeleteContact">Delete Contact</string>
    <string name="NoContactFound">No contact found</string>
    <string name="ContactUpdated">Contact updated</string>
    <string name="NameAndPhoneRequired">Name and phone fields are required</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ContactDeleted">Contact deleted</string>
    <string name="ContactImage">Contact image</string>
    <string name="UploadNewImage">Upload a new image</string>
    <string name="Camera">Camera</string>
    <string name="Photos">Photos</string>
    <string name="Cancel">Cancel</string>
    <string name="RemovePhoto">Remove photo</string>
    <string name="Save">Save</string>
    <string name="NameRequired">Name is required</string>
    <string name="PhoneRequired">Phone is required</string>
    <string name="PhoneFormatNoValid">Phone format is not valid</string>
    <string name="InvalidEmail">Email is invalid</string>
    <string name="EmailFormatNoValid">Email format is not valid</string>
    <string name="UpdateImage">Update Image</string>
</resources>
